--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "docker-compose -f docker-compose.dev.yml up",
     "postinstall": "cd client && yarn",
-    "client": "cd client && yarn start",
+    "client-dev": "cd client && yarn start",
     "server": "nodemon server.js",
-    "start": "node server.js",
-    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
+    "start": "yarn server",
+    "run-dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client-dev\"",
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "repository": {
@@ -23,8 +24,7 @@
   "homepage": "https://github.com/mpietrowiak/push-notifications#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "web-push": "^3.4.3"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
