--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "push-notifications",
+  "name": "mern-stack",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,14 +14,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mpietrowiak/push-notifications.git"
+    "url": "git+https://github.com/mpietrowiak/mern-stack.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/mpietrowiak/push-notifications/issues"
+    "url": "https://github.com/mpietrowiak/mern-stack/issues"
   },
-  "homepage": "https://github.com/mpietrowiak/push-notifications#readme",
+  "homepage": "https://github.com/mpietrowiak/mern-stack#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1"
