--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "docker-compose -f docker-compose.dev.yml up",
+    "prod": "docker-compose -f docker-compose.prod.yml up",    
     "postinstall": "cd client && yarn",
     "client-dev": "cd client && yarn start",
     "server": "nodemon server.js",
