--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "mern-stack",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
+    "build-ts": "tsc",
+    "watch-ts": "tsc -w",
     "dev": "docker-compose -f docker-compose.dev.yml up",
-    "prod": "docker-compose -f docker-compose.prod.yml up",    
+    "build-image": "docker build -t matas/mern-stack-node .",
     "postinstall": "cd client && yarn",
     "client-dev": "cd client && yarn start",
-    "server": "nodemon server.js",
+    "server": "nodemon dist/server.js",
+    "server-dev": "concurrently --kill-others-on-fail \"yarn watch-ts\" \"yarn server\"",
     "start": "yarn server",
-    "run-dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client-dev\"",
+    "run-dev": "concurrently --kill-others-on-fail \"yarn server-dev\" \"yarn client-dev\"",
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "repository": {
@@ -24,11 +27,16 @@
   },
   "homepage": "https://github.com/mpietrowiak/mern-stack#readme",
   "dependencies": {
+    "@types/express": "^4.17.6",
+    "@types/mongoose": "^5.7.14",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.9.11"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "tslint": "^6.1.2",
+    "typescript": "^3.8.3"
   }
 }
