--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "watch-ts": "tsc -w",
     "dev": "docker-compose -f docker-compose.dev.yml up",
     "build-image": "docker build -t matas/mern-stack-node .",
+    "run-image": "docker run -p 5000:5000 matas/mern-stack-node",
     "postinstall": "cd client && yarn",
     "client-dev": "cd client && yarn start",
     "server": "nodemon dist/server.js",
