--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "next": "^9.3.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "ts-node": "^8.9.1"
   },
   "devDependencies": {
