Fix docker compose

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   node:
     image: node:12.3-alpine
-    command: sh -c "cd /usr/app && npm run server-dev"
+    command: sh -c "cd /usr/app && npm run dev"
     volumes:
       - ./:/usr/app
     ports:
