--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "docker-build-image": "docker build -t matas/mern-stack-node .",
     "docker-run-image": "docker run -p 5000:5000 matas/mern-stack-node",
     "server": "nodemon --watch dist dist/server.js",
-    "dev": "concurrently --kill-others-on-fail \"tsc -w -p tsconfig.dev.json \" \"yarn server\"",
+    "dev": "tsc -p tsconfig.dev.json; concurrently --kill-others-on-fail \"tsc -w -p tsconfig.dev.json \" \"yarn server\"",
     "prod": "tsc -p tsconfig.prod.json; next build; NODE_ENV=production yarn server",
     "heroku-postbuild": "yarn build-client"
   },
@@ -24,14 +24,23 @@
   "homepage": "https://github.com/mpietrowiak/mern-stack#readme",
   "dependencies": {
     "@material-ui/core": "^4.9.12",
+    "@types/bcrypt-nodejs": "^0.0.31",
     "@types/express": "^4.17.6",
+    "@types/jsonwebtoken": "^8.3.9",
     "@types/mongoose": "^5.7.14",
     "@types/next": "^9.0.0",
+    "@types/passport": "^1.0.3",
+    "@types/passport-jwt": "^3.0.3",
+    "@types/passport-local": "^1.0.33",
     "@types/react-dom": "^16.9.7",
+    "bcrypt-nodejs": "^0.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.11",
     "next": "^9.3.6",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.1.2",
