--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,6 +10,8 @@ services:
       - "5000:5000"
     depends_on:
       - mongo
+    environment: 
+      - MONGODB_URI=mongodb://mongo:27017/testDb
   mongo:
     container_name: mongo
     image: mongo
