--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "docker-dev": "docker-compose -f docker-compose.dev.yml up",
     "docker-build-image": "docker build -t matas/mern-stack-node .",
     "docker-run-image": "docker run -p 5000:5000 matas/mern-stack-node",
-    "server": "nodemon --watch dist dist/server.js",
-    "dev": "tsc -p tsconfig.dev.json; concurrently --kill-others-on-fail \"tsc -w -p tsconfig.dev.json \" \"yarn server\"",
-    "prod": "tsc -p tsconfig.prod.json; next build; NODE_ENV=production yarn server",
+    "dev": "tsc -p tsconfig.dev.json; nodemon",
+    "prod": "tsc -p tsconfig.prod.json; next build; NODE_ENV=production node dist/server",
+    "server": "nodemon --config nodemon.prod.json",
     "heroku-postbuild": "yarn build-client"
   },
   "repository": {
@@ -45,7 +45,7 @@
     "react-dom": "^16.13.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "ts-node": "^8.9.1"
+    "ts-node": "^8.10.1"
   },
   "devDependencies": {
     "@types/react": "^16.9.34",
