--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "docker-dev": "docker-compose -f docker-compose.dev.yml up",
     "docker-build-image": "docker build -t matas/mern-stack-node .",
     "docker-run-image": "docker run -p 5000:5000 matas/mern-stack-node",
+
     "dev": "tsc -p tsconfig.dev.json; nodemon",
-    "prod": "tsc -p tsconfig.prod.json; next build; NODE_ENV=production node dist/server",
-    "server": "nodemon --config nodemon.prod.json",
-    "heroku-postbuild": "yarn build-client"
+    "start": "tsc -p tsconfig.prod.json; next build; NODE_ENV=production node dist/server"
+  },
+  "engines": {
+    "node": "12.x"
   },
   "repository": {
     "type": "git",
