--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "dist/server.js",
   "scripts": {
-    "docker-dev": "docker-compose -f docker-compose.dev.yml up",
-    "docker-build-image": "docker build -t matas/mern-stack-node .",
-    "docker-run-image": "docker run -p 5000:5000 matas/mern-stack-node",
+    "docker:dev": "docker-compose -f docker-compose.dev.yml up",
+    "docker:build": "docker build -t matas/mern-stack-node .",
+    "docker:run": "docker run -p 5000:5000 matas/mern-stack-node",
     "dev": "tsc -p tsconfig.dev.json; nodemon",
-    "start": "tsc -p tsconfig.prod.json; next build; NODE_ENV=production node dist/server"
+    "build": "tsc -p tsconfig.prod.json; next build",
+    "start": "NODE_ENV=production node dist/server"
   },
   "engines": {
     "node": "12.x"
@@ -24,36 +25,37 @@
   },
   "homepage": "https://github.com/mpietrowiak/mern-stack#readme",
   "dependencies": {
-    "@material-ui/core": "^4.9.12",
-    "@types/bcrypt-nodejs": "^0.0.31",
-    "@types/express": "^4.17.6",
-    "@types/jsonwebtoken": "^8.3.9",
-    "@types/mongoose": "^5.7.14",
-    "@types/next": "^9.0.0",
-    "@types/passport": "^1.0.3",
-    "@types/passport-jwt": "^3.0.3",
-    "@types/passport-local": "^1.0.33",
-    "@types/react-dom": "^16.9.7",
-    "bcrypt-nodejs": "^0.0.3",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.9.11",
-    "next": "^9.3.6",
-    "nookies": "^2.3.0",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "ts-node": "^8.10.1"
+    "@material-ui/core": "4.9.12",
+    "@types/bcrypt-nodejs": "0.0.31",
+    "@types/express": "4.17.6",
+    "@types/jsonwebtoken": "8.3.9",
+    "@types/mongoose": "5.7.14",
+    "@types/next": "9.0.0",
+    "@types/passport": "1.0.3",
+    "@types/passport-jwt": "3.0.3",
+    "@types/passport-local": "1.0.33",
+    "@types/react": "16.9.34",
+    "@types/react-dom": "16.9.7",
+    "bcrypt-nodejs": "0.0.3",
+    "dotenv": "8.2.0",
+    "express": "4.17.1",
+    "mongoose": "5.9.11",
+    "next": "9.3.6",
+    "nookies": "2.3.0",
+    "passport": "0.4.1",
+    "passport-jwt": "4.0.0",
+    "passport-local": "1.0.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-router": "5.1.2",
+    "react-router-dom": "5.1.2",
+    "ts-node": "8.10.1",
+    "webpack": "4.43.0"
   },
   "devDependencies": {
-    "@types/react": "^16.9.34",
-    "concurrently": "^5.1.0",
-    "nodemon": "^2.0.3",
-    "tslint": "^6.1.2",
-    "typescript": "^3.8.3"
+    "concurrently": "5.1.0",
+    "nodemon": "2.0.3",
+    "tslint": "6.1.2",
+    "typescript": "3.8.3"
   }
 }
