--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "docker:build": "docker build -t matas/mern-stack-node .",
     "docker:run": "docker run -p 5000:5000 matas/mern-stack-node",
     "dev": "tsc -p tsconfig.dev.json; nodemon",
-    "build": "tsc -p tsconfig.prod.json; next build",
+    "build": "tsc -p tsconfig.prod.json; next build ./frontend",
     "start": "NODE_ENV=production node dist/server"
   },
   "engines": {
